// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sphere renders correctly when halved 1`] = `
<DocumentFragment>
  .cache-f5i7jk {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 16px solid #333;
  border-top: 16px solid #333;
  border-right: 16px solid #666;
  border-bottom: 16px solid #666;
  border-radius: 50%;
}

.cache-f5i7jk.cache-f5i7jk {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
    class="e1vp87o21 cache-f5i7jk"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1gb8t2p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 16px solid #4f0599;
  border-top: 16px solid #4f0599;
  border-right: 16px solid #4f0599;
  border-bottom: 16px solid #4f0599;
  border-radius: 50%;
}

.cache-1gb8t2p.cache-1gb8t2p {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
    class="e1vp87o21 cache-1gb8t2p"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with one char and smaller 1`] = `
<DocumentFragment>
  .cache-n1f0u1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-left: 10px solid #000;
  border-top: 10px solid #000;
  border-right: 10px solid #000;
  border-bottom: 10px solid #000;
  border-radius: 50%;
}

.cache-n1f0u1.cache-n1f0u1 {
  width: 20px;
  height: 20px;
  position: relative;
}

.cache-b2bnvq {
  color: #fff;
  font-size: 10px;
}

<div
    class="e1vp87o21 cache-n1f0u1"
  >
    <div
      class="cache-b2bnvq e1vp87o20"
    >
      ★
    </div>
  </div>
</DocumentFragment>
`;
